# DEF-cmssm

./: .env.serve  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
benchmarks/: README.md
benchmarks/templates/: README.md  baseline_metrics.csv  kernel_delta.csv  profiling_breakdown.csv
configs/: cart.json  debug.json  pst900.json
kernels/: README.md
kernels/cuda/: README.md  cm_interleave.cu  cm_ss2d_fused.cu  cm_ssm_block.cu  dual_stream_batch.py  setup.py
repositories/CMSSM/: evaluate_CART.py  evaluate_FMB.py  evaluate_SUS.py  evaluate_pst900.py  fps.py  train_CART.py  train_CART_KD.py  train_FMB.py  train_PST900.py  train_SUS.py
repositories/CMSSM/configs/: PST900.json
repositories/CMSSM/models/: CM_SSM.py  model_Conv.py  model_EVit.py  model_mit.py
repositories/CMSSM/models/encoder/: ConvNeXtV2.py  Efficientvit.py
repositories/CMSSM/toolbox/: __init__.py  utils.py
scripts/: anima_autopilot.py  download_assets.sh  find_batch_size.py
src/def_cmssm/: __init__.py  config.py  device.py  evaluate.py  export.py  legacy_adapter.py  paths.py  serve.py  train.py
src/def_cmssm/pipelines/: audit.py  scaffold.py
tasks/: README.md  ROADMAP.md
tasks/slices/: TASK-001-foundation.md  TASK-002-portability-patches.md  TASK-003-config-and-datasets.md  TASK-004-eval-harness.md  TASK-005-benchmark-harness.md  TASK-006-kernel-interleave.md  TASK-007-kernel-fused-blocks.md  TASK-008-mlx-route.md  TASK-009-validation-and-reports.md  TASK-010-release-ci.md
(+5 files in other folders)
